--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,8 +28,15 @@
             </nav>
             
             <ul class="header-list list">
-                <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li>
+                    <a class="link header-mail" href="mailto:info@devstudio.com">
+                        <svg class="icon-mail" width="16" height="12">
+                        <use href="./images/icons.svg#icon-envelope-hover"></use>
+                        </svg>info@devstudio.com</a></li>
+                    <li>
+                    <a class="link header-tel" href="tel:+380961111111"><svg class="icon-tell" width="10" height="16">
+                        <use href="./images/icons.svg#icon-smartphone"></use>
+                    </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>     
     </header>
