--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <li>
                     <a class="link header-mail" href="mailto:info@devstudio.com">
                         <svg class="icon-mail" width="16" height="12">
-                        <use href="./images/icons.svg#icon-envelope-hover"></use>
+                        <use href="../images/icons.svg#icon-envelope-hover"></use>
                         </svg>info@devstudio.com</a></li>
                     <li>
                     <a class="link header-tel" href="tel:+380961111111"><svg class="icon-tell" width="10" height="16">
-                        <use href="./images/icons.svg#icon-smartphone"></use>
+                        <use href="../images/icons.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>     
@@ -55,18 +55,38 @@
                 <h2 class="info-section">особенности</h2>
                 <ul class="list benefits">
                     <li class="benefits-text">
+                        <div class="benefits-box">
+                            <svg class="benefits-icon" width="70" height="70">
+                                <use href="../images/icons.svg#icon-antenna"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Внимание к деталям</h3>
                         <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="benefits-text">
+                        <div class="benefits-box">
+                            <svg class="benefits-icon" width="70" height="70">
+                                <use href="../images/icons.svg#icon-clock"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Пунктуальность</h3>
                         <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li class="benefits-text">
+                        <div class="benefits-box">
+                            <svg class="benefits-icon" width="70" height="70">
+                                <use href="../images/icons.svg#icon-diagram"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Планирование</h3>
                         <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="benefits-text">
+                        <div class="benefits-box">
+                            <svg class="benefits-icon" width="70" height="70">
+                                <use href="../images/icons.svg#icon-astronaut"></use>
+                            </svg>
+                        </div>
                         <h3 class="title">Современные технологии</h3>
                         <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -91,21 +111,188 @@
                         <img src="./images/team/team1.jpg" alt="Игорь Демьяненко" width="270">
                         <h3 class="team-name"> Игорь Демьяненко</h3>
                         <p class="position">Product Designer</p>
+                        <div class="social-list">
+                            <ul class="list-item list">
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use
+                                            href="../images/icons.svg#icon-instagram"
+                                            ></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="team-card">
                         <img src="./images/team/team2.jpg" alt="Ольга Репина" width="270">
                         <h3 class="team-name">Ольга Репина</h3>
                         <p class="position">Frontend Developer</p>
+                        <div class="social-list">
+                            <ul class="list-item list">
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="team-card">
                         <img src="./images/team/team3.jpg" alt="Николай Тарасов" width="270">
                         <h3 class="team-name">Николай Тарасов</h3>
                         <p class="position">Marketing</p>
+                        <div class="social-list">
+                            <ul class="list-item list">
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                     <li class="team-card">
                         <img src="./images/team/team4.jpg" alt="Михаил Ермаков" width="270">
                         <h3 class="team-name">Михаил Ермаков</h3>
                         <p class="position">UI Designer</p>
+                        <div class="social-list">
+                            <ul class="list-item list">
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-list-item">
+                                    <a href="" class="social-link">
+                                        <svg class="social-icon" width="20" height="20">
+                                            <use href="../images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <h2 class="customers-title">Постоянные клиенты</h2>
+                <ul class="list customers-item">
+                    <li class="customers">
+                        <a href="" class="customers-link"><svg class="customers-icon" width="106" height="60">
+                            <use href="../images/icons.svg#icon-Logo1"></use>
+                        </svg></a>
+                    </li>
+                    <li class="customers">
+                        <a href="" class="customers-link"><svg class="customers-icon" width="106" height="60">
+                                <use href="../images/icons.svg#icon-Logo2"></use>
+                            </svg></a>
+                    </li>
+                    <li class="customers">
+                        <a href="" class="customers-link"><svg class="customers-icon" width="106" height="60">
+                                <use href="../images/icons.svg#icon-Logo3"></use>
+                            </svg></a>
+                    </li>
+                    <li class="customers">
+                        <a href="" class="customers-link"><svg class="customers-icon" width="106" height="60">
+                                <use href="../images/icons.svg#icon-Logo4"></use>
+                            </svg></a>
+                    </li>
+                    <li class="customers">
+                        <a href="" class="customers-link"><svg class="customers-icon" width="106" height="60">
+                                <use href="../images/icons.svg#icon-Logo5"></use>
+                            </svg></a>
+                    </li>
+                    <li class="customers">
+                        <a href="" class="customers-link"><svg class="customers-icon" width="106" height="60">
+                                <use href="../images/icons.svg#icon-Logo6"></use>
+                            </svg></a>
                     </li>
                 </ul>
             </div>
@@ -113,13 +300,48 @@
     </main>
     <footer>
         <section class="section footer">
-            <div class="container">
-                <a class="footer-logo link" href="/"><span class="logo-title">Web</span>Studio</a>
-                <address class="footer-info">г. Киев, пр-т Леси Украинки, 26</address>
-                <ul class="list">
-                    <li><a class="link footer-mail" href=",ilto:info@example.com">info@example.com</a></li>
-                    <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
-                </ul>
+            <div class="container subscribe">
+                <div class="info">
+                    <a class="footer-logo link" href="/"><span class="logo-title">Web</span>Studio</a>
+                    <address class="footer-info">г. Киев, пр-т Леси Украинки, 26</address>
+                    <ul class="list">
+                        <li><a class="link footer-mail" href=",ilto:info@example.com">info@example.com</a></li>
+                        <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                    </ul>
+                </div>
+                <div class="subscribe-box">
+                    <p class="subscribe-title">присоединяйтесь</p>
+                    <ul class="list list-item-footer">
+                        <li class="social-list-item">
+                            <a href="" class="social-link-footer">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="../images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-link-footer">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="../images/icons.svg#icon-twitter "></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-link-footer">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="../images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-list-item">
+                            <a href="" class="social-link-footer">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="../images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
     </footer>
