--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li>
                     <a class="link header-mail" href="mailto:info@devstudio.com">
                         <svg class="icon-mail" width="16" height="12">
-                        <use href="../images/icons.svg#icon-envelope-hover"></use>
+                        <use href="./images/icons.svg#icon-envelope-hover"></use>
                         </svg>info@devstudio.com</a></li>
                     <li>
                     <a class="link header-tel" href="tel:+380961111111"><svg class="icon-tell" width="10" height="16">
