--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </svg>info@devstudio.com</a></li>
                     <li>
                     <a class="link header-tel" href="tel:+380961111111"><svg class="icon-tell" width="10" height="16">
-                        <use href="../images/icons.svg#icon-smartphone"></use>
+                        <use href="./images/icons.svg#icon-smartphone"></use>
                     </svg>+38 096 111 11 11</a></li>
             </ul>
         </div>     
@@ -57,7 +57,7 @@
                     <li class="benefits-text">
                         <div class="benefits-box">
                             <svg class="benefits-icon" width="70" height="70">
-                                <use href="../images/icons.svg#icon-antenna"></use>
+                                <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3 class="title">Внимание к деталям</h3>
@@ -66,7 +66,7 @@
                     <li class="benefits-text">
                         <div class="benefits-box">
                             <svg class="benefits-icon" width="70" height="70">
-                                <use href="../images/icons.svg#icon-clock"></use>
+                                <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="title">Пунктуальность</h3>
@@ -75,7 +75,7 @@
                     <li class="benefits-text">
                         <div class="benefits-box">
                             <svg class="benefits-icon" width="70" height="70">
-                                <use href="../images/icons.svg#icon-diagram"></use>
+                                <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="title">Планирование</h3>
@@ -84,7 +84,7 @@
                     <li class="benefits-text">
                         <div class="benefits-box">
                             <svg class="benefits-icon" width="70" height="70">
-                                <use href="../images/icons.svg#icon-astronaut"></use>
+                                <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="title">Современные технологии</h3>
@@ -266,32 +266,32 @@
                 <ul class="list customers-item">
                     <li class="customers">
                         <a href="" class="customers-link"><svg class="customers-icon" width="106" height="60">
-                            <use href="../images/icons.svg#icon-Logo1"></use>
+                            <use href="./images/icons.svg#icon-Logo1"></use>
                         </svg></a>
                     </li>
                     <li class="customers">
                         <a href="" class="customers-link"><svg class="customers-icon" width="106" height="60">
-                                <use href="../images/icons.svg#icon-Logo2"></use>
+                                <use href="./images/icons.svg#icon-Logo2"></use>
                             </svg></a>
                     </li>
                     <li class="customers">
                         <a href="" class="customers-link"><svg class="customers-icon" width="106" height="60">
-                                <use href="../images/icons.svg#icon-Logo3"></use>
+                                <use href="./images/icons.svg#icon-Logo3"></use>
                             </svg></a>
                     </li>
                     <li class="customers">
                         <a href="" class="customers-link"><svg class="customers-icon" width="106" height="60">
-                                <use href="../images/icons.svg#icon-Logo4"></use>
+                                <use href="./images/icons.svg#icon-Logo4"></use>
                             </svg></a>
                     </li>
                     <li class="customers">
                         <a href="" class="customers-link"><svg class="customers-icon" width="106" height="60">
-                                <use href="../images/icons.svg#icon-Logo5"></use>
+                                <use href="./images/icons.svg#icon-Logo5"></use>
                             </svg></a>
                     </li>
                     <li class="customers">
                         <a href="" class="customers-link"><svg class="customers-icon" width="106" height="60">
-                                <use href="../images/icons.svg#icon-Logo6"></use>
+                                <use href="./images/icons.svg#icon-Logo6"></use>
                             </svg></a>
                     </li>
                 </ul>
@@ -315,28 +315,28 @@
                         <li class="social-list-item">
                             <a href="" class="social-link-footer">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="../images/icons.svg#icon-instagram"></use>
+                                    <use href="./images/icons.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-link-footer">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="../images/icons.svg#icon-twitter "></use>
+                                    <use href="./images/icons.svg#icon-twitter "></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-link-footer">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="../images/icons.svg#icon-facebook"></use>
+                                    <use href="./images/icons.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-list-item">
                             <a href="" class="social-link-footer">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="../images/icons.svg#icon-linkedin"></use>
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
