--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
                                             <use
-                                            href="../images/icons.svg#icon-instagram"
+                                            href="./images/icons.svg#icon-instagram"
                                             ></use>
                                         </svg>
                                     </a>
@@ -125,21 +125,21 @@
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -155,28 +155,28 @@
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -192,28 +192,28 @@
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -229,28 +229,28 @@
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-instagram"></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-twitter"></use>
+                                            <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-facebook"></use>
+                                            <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-list-item">
                                     <a href="" class="social-link">
                                         <svg class="social-icon" width="20" height="20">
-                                            <use href="../images/icons.svg#icon-linkedin"></use>
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
